# derecho

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh  config.h.in  connection_manager.cpp  contains_remote_invocable.hpp  create_state_file.cpp  derecho.cfg  derechoConfig.cmake  derecho_caller.h  derecho_group.h  derecho_group_impl.h  derecho_row.cpp  derecho_row.h  dynamic_connection_setup.cpp  filewriter.cpp  filewriter.h  gms_test2.cpp  log_recovery_helper.sh  log_tail_length.cpp  managed_group.h  managed_group_impl.h  notes_for_persistence  parse_state_file.cpp  persistence.h  setup-mutils-build  time_records_0  view.h  view_impl.h
applications/archive/: CMakeLists.txt  asynchronous_dht.cpp  bytes_object.h  count_write.cpp  cpu_load_experiment.cpp  custom_subgroup_profiles_test.cpp  debug_failure_test.cpp  derecho_bw_test.cpp  derecho_caller_test.cpp  distributed_counting.cpp  initialize.cpp  initialize.hpp  latency_test.cpp  long_subgroup_test.cpp  membership_tests.cpp  multiple_senders_multiple_messages.cpp  objstore.cpp  p2p_latency_test.cpp  p2p_query_test.cpp  p2p_send_test.cpp  persistent_latency_test.cpp  persistent_rejoin_test.cpp  persistent_temporal_query_test.cpp  persistent_temporal_send_test.cpp  persistent_temporal_stability_test.cpp  persistent_typed_subgroup_bw_test.cpp  persistent_typed_subgroup_test.cpp  persistent_vector.cpp  random_messages.cpp  random_thread_reads.cpp  raw_send_test.cpp  rdma_for_ml.cpp  rdma_two_sided.cpp  rdmc_test.cpp  repeated_rpc_test.cpp  row_size_scaling_write.cpp  scaling_subgroup_test.cpp  selective_put_test.cpp  server_client_p2p.cpp  shard_iterator_p2p_test.cpp  (+21 more)
applications/demos/: CMakeLists.txt  README.md  dds-default.cfg  overlapping_replicated_objects.cpp  random_messages.cpp  sample_objects.h  simple_data_distribution_service.cpp  simple_data_distribution_service.hpp  simple_replicated_objects.cpp
conf/: CMakeLists.txt  conf.cpp  conf.hpp  derecho-default.cfg  derecho-sample.cfg  test.cpp
conf/getpot/: GetPot.cpp
derecho/: .gitignore  CMakeLists.txt  connection_manager.cpp  connection_manager.h  connection_test.cpp  container_template_functions.h  create_state_file.cpp  derecho.h  derecho_caller.h  derecho_exception.h  derecho_group.h  derecho_group_impl.h  derecho_internal.h  derecho_modes.h  derecho_ports.h  derecho_row.cpp  derecho_row.h  derecho_sst.cpp  derecho_sst.h  derecho_type_definitions.h  dynamic_connection_setup.cpp  filewriter.cpp  filewriter.h  generate_register_functions.py  gms_test.cpp  gms_test2.cpp  group.h  group_impl.h  latest_logged_message.cpp  locked_reference.h  log_tail_length.cpp  logger.cpp  logger.h  main.cpp  managed_group.h  managed_group_impl.h  max_members.h  multicast_group.cpp  multicast_group.h  multicast_group_impl.h  (+30 more)
derecho/experiments/: .gitignore  CMakeLists.txt  aggregate_bandwidth.cpp  aggregate_bandwidth.h  api_cost.cpp  asynchronous_dht.cpp  basic_persistence_test.cpp  block_size.cpp  bytes_object.h  cooked_send_test.cpp  derecho_bw_test.cpp  derecho_caller_test.cpp  gms_bw_test.cpp  gms_test.cpp  gms_test2.cpp  initialize.cpp  initialize.h  latency_test.cpp  local_filewriter_test.cpp  log_recovery_crash.cpp  log_recovery_restart.cpp  logging_benchmark.cpp  long_subgroup_test.cpp  messages.cpp  multiple_senders_multiple_messages.cpp  objstore.cpp  p2p_bandwidth_test.cpp  p2p_latency_test.cpp  p2p_query_test.cpp  persistent_latency_test.cpp  persistent_rejoin_test.cpp  persistent_temporal_query_test.cpp  persistent_temporal_stability_test.cpp  persistent_typed_subgroup_bw_test.cpp  persistent_typed_subgroup_test.cpp  persistent_vector.cpp  random_messages.cpp  raw_send_test.cpp  rdmc_bw_test.cpp  rdmc_bw_test1.cpp  (+30 more)
langs/java/: CMakeLists.txt  Manifest.txt  README.md  format.sh
objectstore/: CMakeLists.txt  Object.hpp  ObjectStore.cpp  ObjectStore.hpp  ObjectStoreException.hpp  README.md  default-extra.cfg  objectstore-default.cfg  performance.cpp  test.cpp
objectstore/java/: CMakeLists.txt  OSSTest.java  ObjectStoreService.cpp  ObjectStoreService.h  ObjectStoreService.java  README.md
persistent/: CMakeLists.txt  FilePersistLog.cpp  FilePersistLog.hpp  HLC.cpp  HLC.hpp  PersistException.hpp  PersistLog.cpp  PersistLog.hpp  PersistNoLog.hpp  Persistent.cpp  Persistent.hpp  PersistentTypenames.hpp  SPDKPersistLog.hpp  test.cpp  util.hpp
rdmc/: .gitignore  CMakeLists.txt  connection.cpp  connection.h  experiment.cpp  group_send.cpp  group_send.h  lf_helper.cpp  lf_helper.h  message.h  microbenchmarks.h  rdmc.cpp  rdmc.h  schedule.cpp  schedule.h  util.cpp  util.h  verbs_helper.cpp  verbs_helper.h
src/applications/: CMakeLists.txt  README.md
src/conf/: CMakeLists.txt  conf.cpp  derecho-sample.cfg  derecho_node-sample.cfg  leader_registry.cpp  leader_registry_client.cpp  member_registry.cpp  member_registry_client.cpp  test.cpp
src/core/: .gitignore  CMakeLists.txt  bytes_object.cpp  connection_manager.cpp  connection_manager.h  derecho_internal.h  derecho_sst.cpp  evaluation_policy.cpp  generate_register_functions.py  git_version.cpp  git_version.cpp.in  make_kind_map.h  multicast_group.cpp  notification.cpp  p2p_connection.cpp  p2p_connection_manager.cpp  p2p_connections.cpp  persistence_manager.cpp  public_key_store.cpp  remote_invocable.h  restart_state.cpp  restart_state.h  rpc_manager.cpp  rpc_manager.h  rpc_utils.cpp  rpc_utils.h  subgroup_functions.cpp  version_code.cpp  view.cpp  view_manager.cpp
src/rdmc/: README  (+13 more)
sst/: .gitignore  CMakeLists.txt  Doxyfile  NamedRowPredicates.h  README.md  combinator_utils.h  combinators.h  lf.cpp  lf.h  max_msg_size.h  multicast.h  multicast_msg.h  multicast_sst.h  named_function.h  poll_utils.cpp  poll_utils.h  predicate.hpp  predicate_impl.hpp  predicates.h  sst.cpp  sst.h  sst.hpp  sst_impl.h  sst_impl.hpp  sst_multicast.h  sst_registry.cpp  sst_registry.hpp  util.h  verbs.cpp  verbs.h
tcp/: .gitignore  CMakeLists.txt  tcp.cpp  tcp.h  tcp.hpp  tcp_connection.cpp  tcp_connection.hpp  tcp_connection_manager.cpp  tcp_connection_manager.hpp
(+591 files in other folders)
